{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 20,
  "lineage": "dbdd8f68-6f6e-d489-50f0-73b595140eb6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423477239:internet-gateway/igw-04b8c2f5bfde28b08",
            "id": "igw-04b8c2f5bfde28b08",
            "owner_id": "637423477239",
            "tags": {
              "Name": "igw-ecs"
            },
            "tags_all": {
              "Name": "igw-ecs"
            },
            "vpc_id": "vpc-0a24c8b75b67c313a"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423477239:route-table/rtb-05586885ec1f85fc0",
            "id": "rtb-05586885ec1f85fc0",
            "owner_id": "637423477239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b8c2f5bfde28b08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a24c8b75b67c313a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0136da09caa9b3858",
            "route_table_id": "rtb-05586885ec1f85fc0",
            "subnet_id": "subnet-0de940e8e6376ba78"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.vpc_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423477239:security-group/sg-0470bcba60d93fa0a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0470bcba60d93fa0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "637423477239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a24c8b75b67c313a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423477239:subnet/subnet-0de940e8e6376ba78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de940e8e6376ba78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423477239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-ecs-public"
            },
            "tags_all": {
              "Name": "subnet-ecs-public"
            },
            "vpc_id": "vpc-0a24c8b75b67c313a"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423477239:vpc/vpc-0a24c8b75b67c313a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b03663b220a2425",
            "default_route_table_id": "rtb-0bceab6c634887935",
            "default_security_group_id": "sg-0d196650464689b2d",
            "dhcp_options_id": "dopt-095326c6ce3a9aca4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a24c8b75b67c313a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bceab6c634887935",
            "owner_id": "637423477239",
            "tags": {
              "Name": "vpc-ecs"
            },
            "tags_all": {
              "Name": "vpc-ecs"
            }
          }
        }
      ]
    }
  ]
}